# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.18 2004/12/21 18:19:33 agaffney Exp $

*GLI-gtkfe-0.01 (11 Dec 2004)
  
  21 Dec 2004; John Laliberte <allanonl@bu.edu>
  Daemons.py, Bootloader.py, Kernel.py, Stage.py, PortageTree.py, 
  MakeDotConf.py, RcDotConf.py now selects/loads the appropriate 
  options if a profile is loaded.  They are selected when each screen 
  is activated.
  Removed deprecation warning caused by gtk.OptionMenu() in Widgets.py.
  Removed some old debug values that were unnecessary.
  Integrated the Stage tarball URI, it nows loads from a profile and checks
  to make sure its a valid value by changing the background to pink.
  Created a test profile, "test_installprofile.xml" that selects different
  options illustrating the changes.
  
  20 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
  Partition screen "complete" with idiot-proofed goodness! Minor modification
  for info display when creating logical partition. Slider color changes to
  match selected filesystem when creating new partition.

  19 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
  Exit button works. Load button works. Save button works. Minor fixes to
  NetworkMounts due to switch to ComboBox for Type field. Old resize slider
  is now "new partition" slider. Partition screen adds/removes partitions.

  18 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
  Added Load/Save buttons and images (don't do anything yet). Reordered
  fields in NetworkMounts and added button next to Export ComboBox.

  12 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
  Completed rough working NetworkMounts screen: adds/removes/updates entries
  and saves to/reads from install profile. Moved some duplicated code into
  [enable|disable]_all_fields() functions. "fixed" the problem with the GTK
  assertion when calling set_text_column(0).

  12 Dec 2004; John Laliberte <allanonl@bu.edu>