@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.18 2004/12/21 18:19:33 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.19 2004/12/22 03:48:42 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
   
@@ -9,12 +9,16 @@
   MakeDotConf.py, RcDotConf.py now selects/loads the appropriate 
   options if a profile is loaded.  They are selected when each screen 
   is activated.
+  In Timezone.py,Users.py
   Removed deprecation warning caused by gtk.OptionMenu() in Widgets.py.
   Removed some old debug values that were unnecessary.
   Integrated the Stage tarball URI, it nows loads from a profile and checks
   to make sure its a valid value by changing the background to pink.
   Created a test profile, "test_installprofile.xml" that selects different
   options illustrating the changes.
+  Stage.py: Now doesn't change screens if the URI is invalid.
+  Timezone.py: Changed the entire layout.  Made a recursive function to
+  populate the treeview with the timezones from /usr/share/zoneinfo.
   
   20 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
   Partition screen "complete" with idiot-proofed goodness! Minor modification
